--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header > p {
     padding-left: 10px;
     margin: auto;
      text-shadow: 2px 2px 0px rgb(0, 0, 0);
-     margin-bottom: 20px;
+     padding: 30px;
 }
 
 nav {
